@@ -1,4 +1,4 @@
-// Copyright 2011 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2011, 2012 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.stats;
 
 import java.util.*;
@@ -10,10 +10,12 @@ import org.deltava.beans.stats.DispatchStatistics;
 import org.deltava.commands.*;
 import org.deltava.dao.*;
 
+import org.deltava.util.CalendarUtils;
+
 /**
  * A Web Site Command to display ACARS Dispatcher statistics.
  * @author Luke
- * @version 3.6
+ * @version 5.0
  * @since 3.6
  */
 
@@ -24,12 +26,16 @@ public class DispatcherStatsCommand extends AbstractCommand {
 	 * @param ctx the Command context
 	 * @throws CommandException if an unhandled error occurs.
 	 */
+	@Override
 	public void execute(CommandContext ctx) throws CommandException {
 		
 		// Get the date
 		DateRange dr = DateRange.parse(ctx.getParameter("range"));
-		if (dr == null)
-			dr = DateRange.createMonth(new Date());
+		if (dr == null) {
+			Calendar cld = CalendarUtils.getInstance(null, true);
+			cld.set(Calendar.DAY_OF_MONTH, 1);
+			dr = DateRange.createMonth(cld.getTime());
+		}
 		
 		try {
 			Connection con = ctx.getConnection();
@@ -43,7 +49,7 @@ public class DispatcherStatsCommand extends AbstractCommand {
 			// Get the User IDs
 			Collection<Integer> IDs = new HashSet<Integer>();
 			for (DispatchStatistics st : stats)
-				IDs.add(new Integer(st.getID()));
+				IDs.add(Integer.valueOf(st.getID()));
 			
 			// Load the users
 			GetUserData uddao = new GetUserData(con);
@@ -63,6 +69,7 @@ public class DispatcherStatsCommand extends AbstractCommand {
 			dr = new DateRange(dr.getStartDate(), now);
 		
 		// Display dates
+		ctx.setAttribute("utc", TZInfo.UTC, REQUEST);
 		ctx.setAttribute("range", dr, REQUEST);
 		ctx.setAttribute("totalHours", new Double(dr.getLength() / 3600000.0), REQUEST);
 		
